// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Breadcrumbs Normal 1`] = `
<ol
  className="sc-bdVaJa kMHSzB"
>
  <li
    className="sc-bwzfXH hVndch"
  >
    <a
      className="sc-htpNat jckYL"
      href="/#"
      onClick={[Function]}
    >
      Industry
    </a>
  </li>
  <li
    className="sc-bwzfXH hVndch"
  >
    <a
      className="sc-htpNat jckYL"
      href="/#"
      onClick={[Function]}
    >
      Get funding
    </a>
  </li>
  <li
    className="sc-bwzfXH hVndch"
  >
    Find a fund to create films, TV or new formats of storytelling
  </li>
</ol>
`;

exports[`Storyshots Breadcrumbs Wrapping 1`] = `
<ol
  className="sc-bdVaJa kMHSzB"
>
  <li
    className="sc-bwzfXH hVndch"
  >
    <a
      className="sc-htpNat jckYL"
      href="/#"
      onClick={[Function]}
    >
      Industry
    </a>
  </li>
  <li
    className="sc-bwzfXH hVndch"
  >
    <a
      className="sc-htpNat jckYL"
      href="/#"
      onClick={[Function]}
    >
      Get funding
    </a>
  </li>
  <li
    className="sc-bwzfXH hVndch"
  >
    <a
      className="sc-htpNat jckYL"
      href="/#"
      onClick={[Function]}
    >
      Find a fund to create films, TV or new formats of storytelling
    </a>
  </li>
  <li
    className="sc-bwzfXH hVndch"
  >
    Find a fund to create films, TV or new formats of storytelling
  </li>
</ol>
`;

exports[`Storyshots Header Opaque Background 1`] = `
Array [
  <div
    className="sc-EHOje edRyCG"
  >
    <div
      className="sc-bZQynM eSVAVT"
    >
      <ul
        className="sc-gzVnrw ktMKgT"
      >
        <li
          className="sc-htoDjs btMUjf"
        >
          <a
            href="https://whatson.bfi.org.uk/Online/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Buy tickets
          </a>
        </li>
        <li
          className="sc-htoDjs btMUjf"
        >
          <a
            href="https://player.bfi.org.uk/"
            rel="noopener noreferrer"
            target="_blank"
          >
            BFI Player
          </a>
        </li>
        <li
          className="sc-htoDjs btMUjf"
        >
          <a
            href="/"
            rel="noopener noreferrer"
          >
            Become a member
          </a>
        </li>
      </ul>
    </div>
  </div>,
  <header
    className="sc-eNQAEJ dGHtZT"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="sc-hMqMXs jRGVlV"
    >
      <a
        aria-current="page"
        className="sc-kEYyzF jnEmNE"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="British Film Institute"
          className="sc-kkGfuU hxLIjy"
          src="test-file-stub"
        />
      </a>
      <nav
        className="sc-kAzzGY dMTebm"
      >
        <ul
          className="sc-chPdSV cyjTzc"
        >
          <li
            className="sc-kgoBCf fKCqML"
          >
            <a
              active={true}
              aria-haspopup="true"
              className="sc-kGXeez lVyac"
              hovered={false}
              href="/#"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Watch
            </a>
          </li>
          <li
            className="sc-kgoBCf fKCqML"
          >
            <a
              aria-haspopup="true"
              className="sc-kGXeez fDwBPQ"
              hovered={false}
              href="/#"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Discover
            </a>
          </li>
          <li
            className="sc-kgoBCf fKCqML"
          >
            <a
              aria-haspopup="true"
              className="sc-kGXeez fDwBPQ"
              hovered={false}
              href="/#"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Industry
            </a>
          </li>
          <li
            className="sc-kgoBCf fKCqML"
          >
            <a
              aria-haspopup="true"
              className="sc-kGXeez fDwBPQ"
              hovered={false}
              href="/#"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Learn
            </a>
          </li>
          <li
            className="sc-kgoBCf fKCqML"
          >
            <a
              aria-haspopup="true"
              className="sc-kGXeez fDwBPQ"
              hovered={false}
              href="/#"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              About
            </a>
          </li>
          <li
            className="sc-kgoBCf fKCqML"
          >
            <a
              aria-haspopup="true"
              className="sc-kGXeez fDwBPQ"
              hovered={false}
              href="/#"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Join
            </a>
          </li>
        </ul>
      </nav>
      <button
        aria-controls="menu-panel"
        aria-expanded="false"
        className="sc-cSHVUG TNZdw"
        onClick={[Function]}
      >
        Menu
        <div
          className="sc-jzJRlG coLzYu"
          open={false}
        >
          <div />
        </div>
      </button>
      <button
        className="sc-bxivhb ePWSQU"
      >
        <img
          alt=""
          className="sc-ifAKCX iBqFkz"
          src="test-file-stub"
        />
        Search
      </button>
    </div>
  </header>,
]
`;

exports[`Storyshots Header Transparent Background 1`] = `
Array [
  <div
    className="sc-EHOje edRyCG"
  >
    <div
      className="sc-bZQynM eSVAVT"
    >
      <ul
        className="sc-gzVnrw ktMKgT"
      >
        <li
          className="sc-htoDjs btMUjf"
        >
          <a
            href="https://whatson.bfi.org.uk/Online/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Buy tickets
          </a>
        </li>
        <li
          className="sc-htoDjs btMUjf"
        >
          <a
            href="https://player.bfi.org.uk/"
            rel="noopener noreferrer"
            target="_blank"
          >
            BFI Player
          </a>
        </li>
        <li
          className="sc-htoDjs btMUjf"
        >
          <a
            href="/"
            rel="noopener noreferrer"
          >
            Become a member
          </a>
        </li>
      </ul>
    </div>
  </div>,
  <header
    className="sc-eNQAEJ kkuIUp"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="sc-hMqMXs jRGVlV"
    >
      <a
        aria-current="page"
        className="sc-kEYyzF jnEmNE"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="British Film Institute"
          className="sc-kkGfuU hxLIjy"
          src="test-file-stub"
        />
      </a>
      <nav
        className="sc-kAzzGY dMTebm"
      >
        <ul
          className="sc-chPdSV cyjTzc"
        >
          <li
            className="sc-kgoBCf fKCqML"
          >
            <a
              active={true}
              aria-haspopup="true"
              className="sc-kGXeez ezceRL"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Watch
            </a>
          </li>
          <li
            className="sc-kgoBCf fKCqML"
          >
            <a
              aria-haspopup="true"
              className="sc-kGXeez pVICN"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Discover
            </a>
          </li>
          <li
            className="sc-kgoBCf fKCqML"
          >
            <a
              aria-haspopup="true"
              className="sc-kGXeez pVICN"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Industry
            </a>
          </li>
          <li
            className="sc-kgoBCf fKCqML"
          >
            <a
              aria-haspopup="true"
              className="sc-kGXeez pVICN"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Learn
            </a>
          </li>
          <li
            className="sc-kgoBCf fKCqML"
          >
            <a
              aria-haspopup="true"
              className="sc-kGXeez pVICN"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              About
            </a>
          </li>
          <li
            className="sc-kgoBCf fKCqML"
          >
            <a
              aria-haspopup="true"
              className="sc-kGXeez pVICN"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Join
            </a>
          </li>
        </ul>
      </nav>
      <button
        aria-controls="menu-panel"
        aria-expanded="false"
        className="sc-cSHVUG TNZdw"
        onClick={[Function]}
      >
        Menu
        <div
          className="sc-jzJRlG coLzYu"
          open={false}
        >
          <div />
        </div>
      </button>
      <button
        className="sc-bxivhb eeoLXE"
      >
        <img
          alt=""
          className="sc-ifAKCX iBqFkz"
          src="test-file-stub"
        />
        Search
      </button>
    </div>
  </header>,
]
`;

exports[`Storyshots Header With Overflowing Content 1`] = `
Array [
  <div
    className="sc-EHOje edRyCG"
  >
    <div
      className="sc-bZQynM eSVAVT"
    >
      <ul
        className="sc-gzVnrw ktMKgT"
      >
        <li
          className="sc-htoDjs btMUjf"
        >
          <a
            href="https://whatson.bfi.org.uk/Online/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Buy tickets
          </a>
        </li>
        <li
          className="sc-htoDjs btMUjf"
        >
          <a
            href="https://player.bfi.org.uk/"
            rel="noopener noreferrer"
            target="_blank"
          >
            BFI Player
          </a>
        </li>
        <li
          className="sc-htoDjs btMUjf"
        >
          <a
            href="/"
            rel="noopener noreferrer"
          >
            Become a member
          </a>
        </li>
      </ul>
    </div>
  </div>,
  <header
    className="sc-eNQAEJ dGHtZT"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="sc-hMqMXs jRGVlV"
    >
      <a
        aria-current="page"
        className="sc-kEYyzF jnEmNE"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="British Film Institute"
          className="sc-kkGfuU hxLIjy"
          src="test-file-stub"
        />
      </a>
      <nav
        className="sc-kAzzGY dMTebm"
      >
        <ul
          className="sc-chPdSV cyjTzc"
        >
          <li
            className="sc-kgoBCf fKCqML"
          >
            <a
              active={true}
              aria-haspopup="true"
              className="sc-kGXeez lVyac"
              hovered={false}
              href="/#"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Watch
            </a>
          </li>
          <li
            className="sc-kgoBCf fKCqML"
          >
            <a
              aria-haspopup="true"
              className="sc-kGXeez fDwBPQ"
              hovered={false}
              href="/#"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Discover
            </a>
          </li>
          <li
            className="sc-kgoBCf fKCqML"
          >
            <a
              aria-haspopup="true"
              className="sc-kGXeez fDwBPQ"
              hovered={false}
              href="/#"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Industry
            </a>
          </li>
          <li
            className="sc-kgoBCf fKCqML"
          >
            <a
              aria-haspopup="true"
              className="sc-kGXeez fDwBPQ"
              hovered={false}
              href="/#"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Learn
            </a>
          </li>
          <li
            className="sc-kgoBCf fKCqML"
          >
            <a
              aria-haspopup="true"
              className="sc-kGXeez fDwBPQ"
              hovered={false}
              href="/#"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              About
            </a>
          </li>
          <li
            className="sc-kgoBCf fKCqML"
          >
            <a
              aria-haspopup="true"
              className="sc-kGXeez fDwBPQ"
              hovered={false}
              href="/#"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Join
            </a>
          </li>
        </ul>
      </nav>
      <button
        aria-controls="menu-panel"
        aria-expanded="false"
        className="sc-cSHVUG TNZdw"
        onClick={[Function]}
      >
        Menu
        <div
          className="sc-jzJRlG coLzYu"
          open={false}
        >
          <div />
        </div>
      </button>
      <button
        className="sc-bxivhb ePWSQU"
      >
        <img
          alt=""
          className="sc-ifAKCX iBqFkz"
          src="test-file-stub"
        />
        Search
      </button>
    </div>
  </header>,
  <div
    style={
      Object {
        "background": "linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(0,0,0,1) 100%)",
        "height": "200vh",
        "width": "100%",
      }
    }
  />,
]
`;

exports[`Storyshots Headline Level 1 1`] = `
<h1
  className="sc-iAyFgw iZorNx"
>
  My example headline
</h1>
`;

exports[`Storyshots Headline Level 2 1`] = `
<h2
  className="sc-hSdWYo ezUQLr"
>
  My example headline
</h2>
`;

exports[`Storyshots Headline Level 3 1`] = `
<h3
  className="sc-eHgmQL itmkpO"
>
  My example headline
</h3>
`;
